[package]
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stmfcu-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"

[dependencies.stm32f4xx-hal]
features = ["stm32f401", "rt"]
version = "0.8.2"

# this lets you use `cargo fix`!
[[bin]]
name = "stmfcu-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
